# anki-summarize-notes

./: .pre-commit-config.yaml  README.md  pyproject.toml
anki_summarize_notes/: __init__.py
